src/styles/main.css
:root {
	--background: #1a1a1a;
	--darktWhite: #666666;
	--lightWhite: #909090;
	--lighterWhite: #d7d7d7;
	--darkBlue: #303245;
	--orange: #e8871e;
	--navHeight: 3rem;
	--footerHeight: 3rem;
	--paddingTop: 1rem;
}
html {
	color: var(--lightWhite);
}
/* fonts */
@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@300;700;800&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300;700&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&display=swap');

/* --------------- general ------------ */
ul {
	padding: 0;
}
a,
li {
	text-decoration: none;
	list-style: none;
}

button,
a {
	cursor: pointer;
	-webkit-tap-highlight-color: transparent;
}
span {
	text-decoration: none;
	font-weight: 700;
	font-size: 1.1 rem;
}

/* --------------- pages containers ------------ */
.about-container,
.portfolio-container,
.skills-container,
.contact-container {
	min-height: calc(
		100vh - var(--footerHeight) - var(--navHeight) - var(--paddingTop)
	);
	padding-bottom: var(--footerHeight);
	padding-top: calc(var(--navHeight) + var(--paddingTop));
	margin: auto;
	position: relative;
}

/* --------------- pages h1 ------------ */
.about-container h1,
.skills-container h1,
.portfolio-container h1 {
	font-family: 'Montserrat', sans-serif;
	font-weight: 700;
	font-size: 1.5rem;
	letter-spacing: 4px;
	color: var(--lighterWhite);
	text-transform: uppercase;
	text-align: center;
	width: 300px;
	padding: 1rem 0;
	border: 2px solid var(--lighterWhite);
	margin: 1rem auto 1rem auto;
}

/* --------------- scroll bar ------------ */
body::-webkit-scrollbar {
	width: 0.85rem;
}

body::-webkit-scrollbar-track {
	box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
}

body::-webkit-scrollbar-thumb {
	background-color: var(--darktWhite);
	outline: none;
	border-radius: 20px;
}

/* Index */
body {
	background-color: var(--background);
}
.layout {
	position: relative;
}
.partilces {
	position: absolute;
	bottom: 0;
	top: 0;
	left: 0;
	right: 0;
}
.text h1 {
	font-size: 5rem;
	font-weight: 700;
}
.hi {
	margin-bottom: -5rem;
	margin-left: 0;
	font-size: 2.5rem;
	font-weight: 700;
}
.description {
	margin-top: -3rem;
	font-size: 1.5rem;
	font-weight: 800;
	color: var(--lightWhite);
}
.text {
	position: absolute;
	top: 40%;
	left: 50%;
	transform: translate(-50%, -50%);
	width: fit-content;
	height: fit-content;
	display: flex;
	flex-direction: column;
	align-items: flex-start;
	font-family: 'Raleway', sans-serif;
	z-index: -1;
}
.index-page {
	position: relative;
}
.flex {
	display: flex;
	align-items: center;
	justify-content: center;
	position: absolute;
	bottom: 15%;
	left: 50%;
	transform: translate(-50%, -50%);
}
.hero p {
	margin-bottom: 0;
}
.hero {
	position: absolute;
	bottom: 0;
	top: 0;
	left: 0;
	right: 0;
	padding: 0;
	color: var(--lighterWhite);
	text-align: center;
}
.icons {
	margin: 0;
}
@media only screen and (max-width: 660px) {
	.text h1 {
		font-size: 3.5rem;
	}
	.hi {
		font-size: 1.5em;
	}
	.description {
		font-size: 1.25rem;
		margin-top: -1rem;
	}
}

/* --------------- Footer --------------- */

.footer {
	background-color: none;
	height: var(--footerHeight);
	display: flex;
	justify-content: center;
	text-decoration: none;
	color: var(--lighterWhite);
	position: absolute;
	bottom: 0;
	left: 0;
	right: 0;
}
.footer a {
	color: var(--darktWhite);
}
/* Navbar */

.nav-container {
	position: fixed;
	z-index: 5;
	top: 0;
	left: 0;
	right: 0;
	width: 100%;
	min-height: var(--navHeight);
	display: flex;
	flex-direction: column;
	background-color: rgb(26, 26, 26, 0.5);
	backdrop-filter: blur(8px);
	text-align: center;
	font-family: 'Raleway', sans-serif;
}
.active-link {
	background-color: var(--lighterWhite);
	color: var(--background) !important;
}
.link {
	text-decoration: none;
	color: var(--lighterWhite);
	padding: 0.5rem 1rem;
	border-top: 1px solid #303030;
	font-size: 1.25rem;
	z-index: 99;
}
.nav-button {
	width: 55px;
	height: 55px;
	border: none;
	padding: 0;
	background-color: transparent;
	cursor: pointer;
	z-index: 99;
}
.header-name {
	color: var(--orange);
	font-weight: 700;
	text-decoration: none;
	font-size: 2rem;
	z-index: 99;
	cursor: pointer;
}
.header-name::after {
	content: '';
	position: relative;
	display: block;
	width: 0;
	height: 3px;
	background-color: var(--orange);
	transition: width 0.3s ease;
}
.header-name:hover::after {
	width: 100%;
}
.header-name:active::after {
	width: 100%;
}

.nav-header {
	display: flex;
	justify-content: space-between;
	align-items: center;
	padding-left: 1rem;
}
.links-container {
	display: flex;
	flex-direction: column;
	height: fit-content;
}

@media only screen and (max-width: 659px) {
	.links-container {
		height: 0;
		overflow: hidden;
		display: flex;
		flex-direction: column;
		transition: 0.7s ease;
	}
	.show-link {
		height: calc(2.5rem * 4);
		background-color: var(--background);
		opacity: 1;
	}
	.link:hover {
		background-color: var(--lightWhite);
		color: var(--background);
	}
}

@media only screen and (min-width: 660px) {
	.links-container a::after {
		content: '';
		position: relative;
		display: block;
		width: 0;
		height: 3px;
		background-color: var(--orange);
		transition: width 0.3s ease;
	}
	.links-container a:hover::after {
		width: 100%;
	}
	.links-container a:active::after {
		width: 100%;
	}
	.nav-container {
		flex-direction: row;
		align-items: center;
		justify-content: space-between;
		max-width: 1200px;
		margin: auto;
	}
	.hero .nav-container {
		background-color: transparent;
		backdrop-filter: blur(0px);
	}
	.links-container {
		flex-direction: row;
		justify-content: space-between;
	}
	.link {
		border: none;
	}
	.nav-button {
		display: none;
	}
}

/* ------------------ 404 ----------------- */

.section-404 {
	font-family: 'Roboto Mono', monospace;
	color: #d7d7d7;
	text-align: center;
}
.section-404 h1 {
	font-size: 8rem;
	margin-bottom: -1rem;
	font-weight: 700;
}
.container-404 {
	display: flex;
	flex-direction: column;
	justify-content: space-between;
	align-content: center;
}

/* About */

.about-text {
	max-width: 1200px;
	font-family: 'Raleway', sans-serif;
	margin: 4rem auto 0 auto;
	line-height: 140%;
	font-size: 1.5rem;
	padding: 0 1rem;
}

/* ---------------- Contact ------------------- */
.lets-talk {
	position: absolute;
	top: 50%;
	left: 50%;
	max-width: 500px;
	width: 90vw;
	padding: 4vh;
	transform: translate(-50%, -50%);
	background: rgba(0, 0, 0, 0.5);
	box-sizing: border-box;
	box-shadow: 0 15px 25px rgba(0, 0, 0, 0.6);
	border-radius: 10px;
	font-family: 'Montserrat', sans-serif;
	z-index: -1;
}
.lets-talk h1 {
	font-size: 1.8rem;
	margin: 0 0 30px;
	padding: 0;
	color: #fff;
	text-align: center;
	font-family: 'Raleway', sans-serif;
}
.lets-talk .form-row {
	position: relative;
}
.input {
	width: 100%;
	padding: 10px 0;
	font-size: 16px;
	color: var(--lighterWhite);
	margin-bottom: 30px;
	border: none;
	border-bottom: 1px solid white;
	outline: none;
	background: transparent;
}
.form-row label {
	padding: 10px 0;
	font-size: 16px;
	color: var(--lighterWhite);
	pointer-events: none;
}
.texterea {
	width: 100%;
	padding: 10px 0;
	font-size: 16px;
	color: var(--lighterWhite);
	margin-bottom: 30px;
	border: none;
	border-bottom: 1px solid white;
	outline: none;
	background: transparent;
}
.submit-btn {
	border-radius: 5px;
	border: 3px solid var(--orange);
	color: var(--orange);
	background: transparent;
	padding: 0.25rem 1rem;
	cursor: pointer;
	font-size: 1.5rem;
	font-weight: 700;
}
.submit-btn:hover {
	background-color: var(--orange);
	color: var(--background);
}
.form {
	display: flex;
	flex-direction: column;
	justify-content: center;
}

/* Portfolio */

.PortfolioCard-container {
	display: flex;
	flex-direction: column;
	max-width: 1000px;
	padding: 1rem;
	margin: 10vh auto;
	font-weight: 400;
}
.card-description-container h3 {
	color: var(--lighterWhite);
	text-transform: uppercase;
	text-align: center;
}
.card-description-container p {
	margin-bottom: 1rem;
}
.portfolio-img {
	width: 100%;
}
.gitIcon {
	width: 25px;
	color: white;
}
.links-card {
	display: flex;
	justify-content: space-evenly;
	margin: 1.5rem;
}
.links-card a {
	text-transform: capitalize;
	padding: 5px 12px;
	border-radius: 20px;
	color: var(--background);
	background-color: var(--lighterWhite);
	transition: 0.3s;
}
.links-card a:hover,
.links-card a:active {
	transform: scale(1.1);
	box-shadow: 0 0 5px 1px var(--lightWhite);
}
.stacks {
	display: grid;
	grid-template-columns: repeat(3, 1fr);
	grid-auto-rows: 2rem;
	justify-content: center;
	justify-items: center;
	margin: 2rem 0;
}
.stacks i {
	padding-right: 0.4rem;
	font-size: 1.3rem;
}

.portfolio-text {
	display: flex;
	flex-direction: column;
	align-items: flex-start;
	padding: 2rem 0;
}

@media only screen and (min-width: 660px) {
	.PortfolioCard-container {
		width: 90vw;
		flex-direction: row;
		position: relative;
		overflow: hidden;
		padding: 0;
	}
	.card-description-container {
		position: absolute;
		top: 0;
		bottom: 0;
		right: 0;
		width: 40%;
		transform: translateX(90vw);
		opacity: 0;
		transition: 1.5s ease-in-out;
		padding: 2rem;
	}
	.PortfolioCard-container:hover .card-description-container {
		transform: translateX(0);
		background-color: rgba(26, 26, 26, 0.9);
		opacity: 1;
	}
}

/* Skills */
.skills-section {
	display: grid;
	grid-template-columns: repeat(2, 35vw);
	grid-auto-rows: 50vw;
	grid-gap: 1rem;
	width: fit-content;
	margin: 7vh auto 0 auto;
}
.skill-div {
	display: flex;
	align-items: center;
	flex-direction: column;
}
.skill-div p {
	font-size: 1.2rem;
	text-transform: uppercase;
}
.skills-imgs {
	width: 80%;
}
@media only screen and (min-width: 400px) {
	.skills-section {
		grid-template-columns: repeat(3, 25vw);
		grid-auto-rows: 30vw;
	}
}
@media only screen and (min-width: 600px) {
	.skills-section {
		grid-template-columns: repeat(4, 20vw);
		grid-auto-rows: 22.5vw;
	}
}
@media only screen and (min-width: 800px) {
	.skills-section {
		grid-template-columns: repeat(4, 160px);
		grid-auto-rows: 180px;
	}
}

